--- a/1.md
+++ b/1.md
@@ -9,7 +9,7 @@
 
 # Syntax
   ```
-  const firstName = "Aniket";
+  const firstName = "Aniket"    //semicolons can be omiited
   const lastName = "Sharma";
   const arr = ["student", 24, true, function(){
   console.log('hi')}
@@ -64,3 +64,5 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
     ```
   #### Output
   ![image](https://github.com/ak5154639/ReactNative-Notes/assets/60311459/c72610c3-a4bf-49d0-943b-6b2b4e91dfb3)
+
+# Coercion
