--- a/1.md
+++ b/1.md
@@ -53,16 +53,79 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
       const x = 42;
       const explicit = String(x);      // explicit === "42"
       const implicit = x + "";          // implicit === "42"
+      ```
   - == vs ===
       - == coerces the types
       - === requires equivalent types
   ### Examples
-    ```
+  ```
     console.log(typeof(string));
     console.log("42" === 42);
     console.log(42 === 42);
-    ```
+  ```
   #### Output
   ![image](https://github.com/ak5154639/ReactNative-Notes/assets/60311459/c72610c3-a4bf-49d0-943b-6b2b4e91dfb3)
 
-# Coercion
+  - Falsy values
+      - undefined
+      - null
+      - false
+      - +0, -0, NaN
+      - ""
+  - Truthy values
+      - {}
+      - []
+      - everythning else
+  > In Javascript arrays, functions and objects all are objects.
+
+# Primitives vs Objects
+  - Primitives are immutable
+  - Objects are mutable and stored by reference
+    #### Three methods to create objects:
+    ```
+    // METHOD 1
+    const  o = new Object()
+    o.firstName = "Aniket"
+    o.lastName = 'Sharma'
+    o.isStudent = true
+    o.greet = function() {
+        console.log("hi")
+    }
+
+    // METHOD 2
+    const o2 = {}
+    o2.firstName = "Aditya"
+    o2['lastName'] = "Sharma"
+    const key = "isStudent"
+    o2[key] = true
+    o2['greet'] = function() {
+        console.log("hello")
+    }
+
+    // METHOD 3
+    const o3 = {
+        1 : "test"    //keys can be numbers and implicitly casted to string as "1"
+        firstName : "Samar",
+        lastName : "Bisht",
+        isStudent : true,
+        greet : function() {
+            console.log("HI")
+        },
+        address : {     //objects can be nested
+            houseNumber: 2123,
+            street: 72,
+            area: "NIT Faridabad"
+        }
+    }
+    ```
+    | On Consoling | Output | Remarks |
+    |--------------|--------|---------|
+    | `o3.address` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/2c794a67-2a1d-4b00-ace1-0fc4c0709917) | accesing values using keys of an object using dot notation |
+    | `o3.address.houseNumber` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/ffabca49-086c-4074-8c3a-6f84e5a2c3fc) | accesing values using keys of nested object using dot notation |
+    | `o3.address['houseNumber']` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/ffabca49-086c-4074-8c3a-6f84e5a2c3fc) | accesing value of key as string inside square braces |
+    | `o3['1']` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/3a2d6e79-e94b-47eb-bfe6-da4834d69eb7) | accesing value of key as string inside square braces as it expects string |
+    | `o3[1]` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/d7c9b255-c275-4413-a81d-ed7a41df2150) | 1 will be coerced to string as square braces expects string |
+    
+
+
+
