--- a/1.md
+++ b/1.md
@@ -126,6 +126,81 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
     | `o3['1']` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/3a2d6e79-e94b-47eb-bfe6-da4834d69eb7) | accesing value of key as string inside square braces as it expects string |
     | `o3[1]` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/d7c9b255-c275-4413-a81d-ed7a41df2150) | 1 will be coerced to string as square braces expects string |
     
+# Object Mutation
+  - Objects are mutable and stored by reference
+    ```
+    const obj = {
+        a: 'a',
+        b:'b'
+    }
+    const o2 = obj;
+    o2.a = "new";
+    console.log(obj.a);
+    ```
+    above code will have output `new` as `obj.a` and `o2.a` both referencing to same object.
 
-
+  ### How can we make this two different objects
+  1. Manually create other duplicte object instead of assigning by object name this could be weird solution.
+  2. Using `Object.assign()` method.
+  ```
+  const obj = {
+      a: 'a',
+      b:'b'
+  }
+  const o2 = Object.assign({}, obj);
+  o2.a = "new";
+  console.log(obj.a);
+  ```
+  > There is even a problem with this, can you tink about the output of code snippet below
+  ```
+  const obj = {
+      a: 'a',
+      b:'b',
+      nest: {
+          key: "this is key"
+      }
+  }
+  const o2 = Object.assign({}, obj);
+  o2.nest.key = "new";
+  console.log(obj.nest.key);
+  ```
+  output of above code snippet will be `new` as nested object `nest` will be refering to same object in both `obj` as well as `o2`.
+  ### Thw How can we do so
+  ```
+  const obj = {
+      a: 'a',
+      b:'b',
+      nest: {
+          key: "this is key"
+      }
+  }
+  
+  // deepcopy
+  function deepCopy(obj) {
+      // check if vals are object then deepcopy that
+      // else return the value
+      const keys = Object.keys(obj);
+  
+      const newObj = {}
+  
+      for (let i = 0; i < keys.length; i++){
+          const key = keys[i];
+          if (typeof(obj[key]) === 'object'){
+              newObj[key] = deepCopy(obj[key])
+          } else {
+              newObj[key] = obj[key]
+          }
+      }
+      return newObj
+  }
+  
+  const o2 = deepCopy(obj);
+  
+  o2.nest.key = "changed"
+  
+  console.log(obj.nest.key)
+  console.log(o2.nest.key)
+  ```
+  - **Output**
+    ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/81c2e39d-99f1-4bc8-8919-44ed6a7f862f)
 
