--- a/1.md
+++ b/1.md
@@ -165,7 +165,7 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
   console.log(obj.nest.key);
   ```
   output of above code snippet will be `new` as nested object `nest` will be refering to same object in both `obj` as well as `o2`.
-  ### Thw How can we do so
+  ### Thw How can we do so **DEEPCOPY**
   ```
   const obj = {
       a: 'a',
@@ -201,6 +201,104 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
   console.log(obj.nest.key)
   console.log(o2.nest.key)
   ```
-  - **Output**
-    ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/81c2e39d-99f1-4bc8-8919-44ed6a7f862f)
+  #### **Output**
+   ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/81c2e39d-99f1-4bc8-8919-44ed6a7f862f)
 
+# Prototype Inheritance
+  - Non-primitive types have a few properties/methods associated with them
+      - Arrays.prototype.push() - can be used as `arr.push(elem)`
+      - String.prototype.toUpperCase() - can be used as `firstName.toUperCase()`
+  - Each object stores a reference to its prototype
+  - Properties/methods defined most tightly to the instance have priority
+  - Using `arr.__proto__` we can check all prperties and methods associated with object.
+
+# Prototypal Inheritance
+  - Most primitive types have object wrappers
+    - String()
+    - Number()
+    - Boolean()
+    - Object()
+    - (Symbol())
+  - JS will automatically "box" (wrap) primitive values so you have access to methods
+    ```
+    42.toString()    //Errors
+    const x = 42;
+    x.toString()    // "42"
+    x.__proto_      // [Number: 0]
+    42.__proto__    //Error
+    x instanceof Number  //false
+    ```
+
+    ## Why we use reference to ptototype?
+      Referencing the prototype is important for creating efficient and organized code. It allows objects to inherit properties and methods from their prototype, reducing memory usage by sharing common functionality among multiple instances. This inheritance mechanism enables dynamic updates to shared behavior at runtime, optimizing performance and improving code organization for easier maintenance and scalability.
+    ```
+    function Person(name) {
+        this.name = name;
+    }
+    
+    // Adding a method to the prototype
+    Person.prototype.greet = function() {
+        console.log("Hello, my name is " + this.name);
+    };
+    
+    // Creating instances of Person
+    let person1 = new Person("Alice");
+    let person2 = new Person("Bob");
+    
+    // Using the method from the prototype
+    person1.greet(); // Output: "Hello, my name is Alice"
+    person2.greet(); // Output: "Hello, my name is Bob"
+
+    ```
+    By referencing methods like `greet` through the prototype, we ensure that every instance of `Person` shares the same method. This saves memory as each instance doesn't need its own copy of the method.
+    ## What's the alternative?
+    ```
+    // Using Object Composition
+    function createPerson(name) {
+        return {
+            name: name,
+            greet: function() {
+                console.log("Hello, my name is " + this.name);
+            }
+        };
+    }
+    
+    let person1 = createPerson("Alice");
+    let person2 = createPerson("Bob");
+    
+    person1.greet(); // Output: "Hello, my name is Alice"
+    person2.greet(); // Output: "Hello, my name is Bob"
+
+    ```
+     Instead of relying on prototypes for sharing behavior, we can use object composition to create objects with shared functionality. Each object has its own copy of the method, but the memory usage might be higher compared to prototypes.
+    
+    ## What's the danger?
+    ```
+    // Using prototype for inheritance
+    function Animal(name) {
+        this.name = name;
+    }
+    
+    Animal.prototype.makeSound = function() {
+        console.log("Animal sound");
+    };
+    
+    function Dog(name, breed) {
+        this.name = name;
+        this.breed = breed;
+    }
+    
+    // Inheriting from Animal
+    Dog.prototype = Object.create(Animal.prototype);
+    Dog.prototype.constructor = Dog;
+    
+    Dog.prototype.makeSound = function() {
+        console.log("Bark");
+    };
+    
+    let dog = new Dog("Buddy", "Labrador");
+    dog.makeSound(); // Output: "Bark"
+    ```
+    One danger is unintentional overwriting of shared behavior. Here, we unintentionally overwrite the `makeSound` method of `Animal` in the `Dog` prototype. This can lead to unexpected behavior and bugs if not carefully managed.
+
+# Scope
