--- a/1.md
+++ b/1.md
@@ -302,3 +302,53 @@ So, while `null` is not an object in the usual sense (it's a primitive value rep
     One danger is unintentional overwriting of shared behavior. Here, we unintentionally overwrite the `makeSound` method of `Animal` in the `Dog` prototype. This can lead to unexpected behavior and bugs if not carefully managed.
 
 # Scope
+  - Variable lifetime
+    - Lexical Scoping (`var`): from when they're declared until when their function ends
+    - Block Scoping (`const`, `let`): until the next `}` is reached
+      | Code | Output | Explanation |
+      |------|--------|-------------|
+      | `const thisIsConst = 50;thisIsConst++   //Error` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/75f20c85-b603-40e6-ac12-5a72f38031a3) | Values of const varibles can't be changes |
+      | `let thisIsLet = 50;thisIsLet = 51;let thisIsLet = 10;` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/65235565-0421-4fac-a0b9-70a28d42bf89) | We can not redeclare the same variable in same scope |
+      | `const obj = {};obj.a = 51;console.log(obj);obj = {};` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/7352f5f6-5f2c-4e53-a73d-317d332dec95) | property or attribute of const object can be modified but entire object can't be modified, const object means that can point to the same object and particular object attributes can be modified and You can notice that we didn't get output for `console.log(obj)` because of javascript's asynchronoius behavior |
+      | `console.log(thisIsConst);const thisIsConst = 50;` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/0a19ea6e-3934-4459-acbf-2929dc93f09e) | As `const` is block scope and can not be accessed before defining |
+      | `console.log(thisIsLet);let thisIsLet = 50;` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/3059dc02-79c3-4c74-b59a-810ad5afa11a) | For the same reason as `const` as bothe `let` and `const` are block scoped |
+      | `var thisIsVar = 50;;thisIsVar++;;var thisIsVar = "shadowed value";console.log(thisIsVar);` | ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/b564f512-588f-4753-b0a3-d3e9abdbc8d3) | `var` can be overshadowed and redclared with same name |
+      | `console.log(thisIsVar);var thisIsVar = 50;` | `undefined` | vars are hoisted to the top of file |
+
+  - Hoisting
+    The behavior whereby a function definition declared at any point/line of file available to use at the top of a file too.
+    - Function definitions are hoisted, nut not lexically-scoped initializations
+      ```
+      thisIsHoisted();
+      
+      function thisIsHoisted() {
+          console.log("this is a function declared at the bottom of a file");
+      }
+      ```
+      ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/64859621-b154-40ce-94c2-16aaa26900c0)
+      Here `thisIsHoisted()` function is hoisted to the top of file and available to use anywhere in file
+      ```
+      thisIsNotHoisted()
+      const thisIsNotHoisted = function () {
+          console.log("This should not be hoisted");
+      }
+      ```
+      ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/70b38cbf-f404-435e-9863-863e4ed474f7)
+      ```
+      thisIsNotHoisted()
+      let thisIsNotHoisted = function () {
+          console.log("This should not be hoisted");
+      }
+      ```
+      ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/70b38cbf-f404-435e-9863-863e4ed474f7)
+      ```
+      thisIsNotHoisted()
+      var thisIsNotHoisted = function () {
+          console.log("This should not be hoisted");
+      }
+      ```
+      ![image](https://github.com/ak5154639/Mobile-App-Development-with-ReactNative-Notes/assets/60311459/cd9c4821-a3d4-4a2d-8d8a-ca33d68db142)
+      In above three snippets and their corresponding output we can see last one has `TypeError` not `ReferenceError` because varible containing function having declared with var is availabe to entire file but not got assigned the values i.e. anonymous function. 
+
+
+# The JavaScript Engine
